[package]
authors = ["roblabla <robinlambertz+dev@gmail.com>"]
name = "i3-tmux-integration"
version = "0.1.0"

[dependencies]
backtrace = "*"
byteorder = "*"
error-chain = "0.10.0"
fern = "*"
i3ipc = "*"
libc = "*"
log = "*"
mio = "0.6.10"
mio-uds = "0.6.4"
pty = "*"
tempdir = "*"
termios = "*"
twoway = "*"
unescape = "*"
nom = "*"
nix = "*"

